--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "demo"
+    "url": "https://github.com/redpulse96/defcon_one"
   },
   "author": "Syed Redhan"
 }
