--- a/package.json
+++ b/package.json
@@ -3,29 +3,52 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
+    "pretest": "npm run lint",
+    "lint": "eslint .",
+    "lint:fix": "npm run lint -- --fix",
+    "lint:staged": "lint-staged",
     "debug": "DEBUG=defcon-one:* npm start",
-    "start": "nodemon ./config/boot/boot.js | bunyan -o short",
-    "staging": "NODE_ENV=staging PORT=8000 nodemon ./config/boot/boot.js | bunyan -o short"
+    "start": "NODE_ENV=dev nodemon ./config/boot/boot.js | bunyan -o short",
+    "staging": "NODE_ENV=staging PORT=8000 nodemon ./config/boot/boot.js | bunyan -o short",
+    "production": "NODE_ENV=production PORT=8000 pm2 start ./config/boot/boot.js | bunyan -o short"
   },
+  "lint-staged": {
+    "*.js": [
+      "npm run lint:fix",
+      "git add --force"
+    ],
+    "*.json": [
+      "git add --force"
+    ]
+  },
+  "pre-commit": "lint:staged",
   "dependencies": {
     "async": "^3.1.0",
+    "body-parser": "^1.19.0",
     "btoa": "^1.2.1",
     "bunyan": "^1.8.12",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "ejs": "~2.6.1",
-    "express": "~4.16.1",
+    "express": "^4.16.4",
+    "express-handlebars": "^3.1.0",
     "http-errors": "~1.6.3",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "morgan": "~1.9.1",
+    "mysql": "^2.17.1",
     "mysql2": "^1.7.0",
-    "request": "^2.88.0"
+    "request": "^2.88.0",
+    "sequelize": "^5.21.1",
+    "sequelize-cli": "^5.5.1"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/redpulse96/defcon_one"
   },
   "author": "Syed Redhan",
-  "license": "Unlicensed"
+  "license": "Unlicensed",
+  "devDependencies": {
+    "nodemon": "^1.19.4"
+  }
 }
