--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "mysql2": "^1.7.0",
     "request": "^2.88.0",
     "sequelize": "^5.21.1",
-    "sequelize-cli": "^5.5.1"
+    "sequelize-cli": "^5.5.1",
+    "winston": "^3.2.1"
   },
   "repository": {
     "type": "git",
