--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "lint:fix": "npm run lint -- --fix",
     "lint:staged": "lint-staged",
     "debug": "DEBUG=defcon-one:* npm start",
-    "start": "NODE_ENV=dev nodemon ./config/server/server.js | bunyan -o short",
-    "staging": "NODE_ENV=staging PORT=8000 nodemon ./config/server/server.js | bunyan -o short",
-    "production": "NODE_ENV=production PORT=8000 pm2 start ./config/server/server.js | bunyan -o short"
+    "start": "NODE_ENV=dev LOGS_DIR=../logs/defcon_one_logs/ nodemon app.js | bunyan -o short",
+    "staging": "NODE_ENV=staging PORT=8000 LOGS_DIR=/var/log/defcon_one_logs/ nodemon app.js | bunyan -o short",
+    "production": "NODE_ENV=production PORT=8000 LOGS_DIR=/var/log/defcon_one_logs/ pm2 start app.js | bunyan -o short"
   },
   "dependencies": {
     "async": "^3.1.0",
@@ -29,7 +29,7 @@
     "mysql": "^2.17.1",
     "mysql2": "^1.7.0",
     "request": "^2.88.0",
-    "sequelize": "^5.21.1",
+    "sequelize": "^5.21.2",
     "sequelize-cli": "^5.5.1",
     "winston": "^3.2.1"
   },
