--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "morgan": "~1.9.1",
     "mysql": "^2.17.1",
     "mysql2": "^1.7.0",
+    "passport": "^0.4.0",
     "request": "^2.88.0",
     "sequelize": "^5.21.2",
     "sequelize-cli": "^5.5.1",
@@ -37,6 +38,9 @@
     "type": "git",
     "url": "https://github.com/redpulse96/defcon_one"
   },
+  "contributors": [
+    "Syed Redhan"
+  ],
   "author": "Syed Redhan",
   "license": "Unlicensed",
   "devDependencies": {
