--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "ejs": "~2.6.1",
     "express": "^4.16.4",
     "express-handlebars": "^3.1.0",
+    "hbs": "^4.0.6",
     "http-errors": "~1.6.3",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
