--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "mysql": "^2.17.1",
     "mysql2": "^1.7.0",
     "passport": "^0.4.0",
+    "public-ip": "^3.2.0",
     "request": "^2.88.0",
     "sequelize": "^5.21.2",
     "sequelize-cli": "^5.5.1",
