--- a/package.json
+++ b/package.json
@@ -14,22 +14,28 @@
   },
   "dependencies": {
     "async": "^3.1.0",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "btoa": "^1.2.1",
     "bunyan": "^1.8.12",
+    "connect-flash": "^0.1.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "ejs": "~2.6.1",
     "express": "^4.16.4",
     "express-handlebars": "^3.1.0",
+    "express-session": "^1.17.0",
     "hbs": "^4.0.6",
     "http-errors": "~1.6.3",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
+    "mongoose": "^5.7.12",
     "morgan": "~1.9.1",
     "mysql": "^2.17.1",
     "mysql2": "^1.7.0",
     "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "public-ip": "^3.2.0",
     "request": "^2.88.0",
     "sequelize": "^5.21.2",
