--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "bunyan": "^1.8.12",
     "connect-flash": "^0.1.1",
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
     "ejs": "~2.6.1",
     "express": "^4.16.4",
