--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express": "^4.16.4",
     "express-handlebars": "^3.1.0",
     "express-session": "^1.17.0",
+    "figlet": "^1.2.4",
     "hbs": "^4.0.6",
     "http-errors": "~1.6.3",
     "jsonwebtoken": "^8.5.1",
