--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "request": "^2.88.0",
     "sequelize": "^5.21.2",
     "sequelize-cli": "^5.5.1",
+    "twilio": "^3.38.0",
     "winston": "^3.2.1"
   },
   "repository": {
