--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "figlet": "^1.2.4",
     "hbs": "^4.0.6",
     "http-errors": "~1.6.3",
+    "http-status-codes": "^1.4.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
