--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -9,7 +9,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [10.x, 12.x]
+        node-version: [10.x]
 
     steps:
     - uses: actions/checkout@v1
@@ -21,6 +21,7 @@ jobs:
       run: |
         npm ci
         npm run build --if-present
+        npm run lint:fix
         npm test
       env:
         CI: true
